Add rename-workspace script

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,5 @@ projects/**/pom.xml
 .clj-kondo/.cache
 
 # Calva VS Code Extension
-.calva/output-window/output.calva-repl
+output.calva-repl
+.portal
